--- a/src/assets/sass/_data.scss
+++ b/src/assets/sass/_data.scss
@@ -30,7 +30,7 @@ $color_blueG_500: #7D7D7D;
 $color_blueG_600: #666666;
 $color_blueG_700: #525960;
 $color_blueG_800: #3B4044;
-$color_blusG_900: #181A1B;
+$color_blueG_900: #181A1B;
 $color_bgRed: #FDEDF6;
 $color_hilight: #FFFBE9;
 $color_link: #007CDB;
