--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -286,6 +286,7 @@ button {
 button:disabled {
   background-color: modules.$color_blueG_300 !important;
   color: modules.$color_white !important;
+  border-color: modules.$color_blueG_300 !important;
   pointer-events: none;
 }
 strong {
@@ -528,8 +529,24 @@ input::-webkit-inner-spin-button {
   font-size: 14px;
   font-weight: 500;
   &.black{
-    background-color: modules.$color_blusG_900;
+    background-color: modules.$color_blueG_900;
   }
+}
+
+.btn-textR {
+    display: inline-flex;
+    align-items: center;
+    height: 28px;
+    background-color: modules.$color_blueG_100;
+    color: modules.$color_blueG_800;
+    border-radius: 28px;
+    padding:0 12px;
+    @include modules.font-style(text_smb13);
+
+    &:hover {
+      background-color: modules.$color_bgRed;
+      color: modules.$color_primary;
+    }
 }
 
 .ml16 {
@@ -583,14 +600,14 @@ input::-webkit-inner-spin-button {
 *************/
 
 // Preloading
-.pop-preloading {
+.pop-preloading{
   position: fixed;
   top: 0;
   left: 50%;
   width: 100%;
   height: 100%;
   z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -604,13 +621,13 @@ input::-webkit-inner-spin-button {
     aspect-ratio: 1;
     border-radius: 50%;
     background: 
-      radial-gradient(farthest-side,modules.$color_primary 94%,#0000) top/8px 8px no-repeat,
-      conic-gradient(#0000 30%,modules.$color_primary);
+      radial-gradient(farthest-side,modules.$color_white 94%,#0000) top/8px 8px no-repeat,
+      conic-gradient(#0000 30%,modules.$color_white);
     mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
     animation: ai-loader 1s infinite linear;
   }
   .preloader-text {
-    color: modules.$color_primary;
+    color: modules.$color_white;
     margin-top: 8px;
     animation: blank 1s infinite linear;
     font-weight: 500;
@@ -861,13 +878,30 @@ input::-webkit-inner-spin-button {
   .window-header {
     flex: 0 0 60px;
     box-sizing: border-box;
-    border-bottom: 1px solid #A8B3BD;
+    border-bottom: 1px solid modules.$color_blueG_400;
     font-size: 18px;
-    color: #000;
+    color: modules.$color_secondary;
     font-weight: 600;
     display: flex;
     align-items: center;
-    padding-left: 20px;
+    padding: 0 80px 0 20px;
+
+    .block-btn  {
+      margin-left: auto;
+      padding: 4px 6px;
+      background-color: modules.$color_blueG_100;
+      border-radius: 36px;
+
+      button[class^="btn-"] {
+        margin-right: 4px;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+
+      
+    }
   }
 
   .window-body {
@@ -889,7 +923,7 @@ input::-webkit-inner-spin-button {
     .window-body {
       height: calc(100% - 110px);
       overflow-y: auto;
-      @include modules.custom-scrollbar(round);
+      @include modules.custom-scrollbar();
     }
   }
 }
