--- a/src/assets/sass/_animation.scss
+++ b/src/assets/sass/_animation.scss
@@ -54,6 +54,15 @@
   opacity: 0;
 }
 
+.side-fade-enter-active,
+.side-fade-leave-active {
+  transition: all 0.4s ease;
+}
+.side-fade-enter-from,
+.side-fade-leave-to {
+  opacity: 0;
+}
+
 .fade-infowindow-enter-active,
 .fade-infowindow-leave-active {
   transition: all 0.3s ease;
