--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -453,7 +453,7 @@ input::-webkit-inner-spin-button {
   align-items: center;
   height: 33px;
   padding: 0 16px;
-  background-color: modules.$focus-color;
+  background-color: modules.$color_primary;
   border-radius: 33px;
   color: #fff;
   font-size: 14px;
@@ -474,7 +474,7 @@ input::-webkit-inner-spin-button {
       mask: url(../images/icon_cms.svg) no-repeat 50%;
     }
   }
-  //타겟관리 메뉴 우측 버튼
+  //타겟관리 신규 타겟팅
   &.target{
     .icon{
       display: inline-block;
@@ -486,6 +486,7 @@ input::-webkit-inner-spin-button {
   }
 }
 
+//모달 팝업 취소, 적용 버튼
 .btn-s{
   display: inline-flex;
   align-items: center;
@@ -502,7 +503,7 @@ input::-webkit-inner-spin-button {
     }
   }
   &.red {
-    background-color: modules.$focus-color;
+    background-color: modules.$color_primary;
 
     &:hover {
       background-color: modules.$color_secondary;
@@ -640,56 +641,7 @@ input::-webkit-inner-spin-button {
     50%{opacity: 1}
     100%{opacity: 0.2}
   }
-  // .preloader {
-  //   width: 45px;
-  //   aspect-ratio: 0.75;
-  //   --c: no-repeat linear-gradient(modules.$color_primary 0 0);
-  //   background: var(--c) 0% 50%, var(--c) 50% 50%, var(--c) 100% 50%;
-  //   animation: preloading 1s infinite linear alternate;
-  // }
-  // @keyframes preloading {
-  //   0% {
-  //     background-size: 20% 50%, 20% 50%, 20% 50%;
-  //     opacity: 0.5;
-  //   }
-  //   20% {
-  //     background-size: 20% 20%, 20% 50%, 20% 50%;
-  //   }
-  //   40% {
-  //     background-size: 20% 100%, 20% 20%, 20% 50%;      
-  //   }
-  //   50%{
-  //     opacity: 1;
-  //   }
-  //   60% {
-  //     background-size: 20% 50%, 20% 100%, 20% 20%;
-  //   }
-  //   80% {
-  //     background-size: 20% 50%, 20% 50%, 20% 100%;
-  //   }
-  //   100% {
-  //     background-size: 20% 50%, 20% 50%, 20% 50%;
-  //     opacity: 0.5;
-  //   }
-  // }
 }
-
-// .pop-preloading .preloader {
-//   content: "";
-//   border-radius: 50%;
-//   width: 30px;
-//   height: 30px;
-//   display: inline-block;
-//   font-size: 0 !important;
-//   text-indent: -9999em !important;
-//   border-radius: 50% !important;
-//   border-top: 6px solid rgba(230, 240, 250, 0.5) !important;
-//   border-right: 6px solid rgba(230, 240, 250, 0.5) !important;
-//   border-bottom: 6px solid rgba(230, 240, 250, 0.5) !important;
-//   border-left: 6px solid modules.$focus-color !important;
-//   transform: translateZ(0);
-//   animation: loader-circle 0.5s infinite linear;
-// }
 
 //Dialog
 .dialog-wrapper {
@@ -831,7 +783,7 @@ input::-webkit-inner-spin-button {
       font-weight: 600;
       transition: background-color 0.3s ease;
       border-top: 1px solid rgba(211, 211, 211, 0.2);      
-      background-color: modules.$focus-color;
+      background-color: modules.$color_primary;
       &:hover {
         background-color: modules.$over-color;
       }  
@@ -858,7 +810,7 @@ input::-webkit-inner-spin-button {
           }
         }
         &:nth-child(2) {
-          background-color: modules.$focus-color;
+          background-color: modules.$color_primary;
           &:hover {
             background-color: modules.$over-color;
           }
@@ -949,7 +901,7 @@ input::-webkit-inner-spin-button {
       font-weight: 500;
 
       strong {
-        color: modules.$focus-color;
+        color: modules.$color_primary;
         font-weight: 800;
       }
     }
@@ -994,7 +946,7 @@ input::-webkit-inner-spin-button {
   left: 50%;
   transform: translateX(-50%);
   .slider-box {
-    background: modules.$focus-color;
+    background: modules.$color_primary;
     padding: 18px 40px 18px 30px;
     border-radius: 8px;
     position: relative;
@@ -1185,30 +1137,6 @@ input::-webkit-inner-spin-button {
   width: 100%;
 }
 
-// 조건없을경우 일반 적인 공통 버튼 css
-.btn-common {
-  padding: 0;
-  width: 100px;
-  height: 28px;
-  text-align: center;
-  border-radius: 4px;
-  border: 1px solid modules.$color_blueG_600;
-  color: modules.$color_secondary;
-  //background-color: transparent;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  &:hover {
-    border-color: modules.$color_primary;
-    color: modules.$color_primary;
-  }
-  &:disabled {
-    border-color: modules.$color_blueG_100;
-    color: modules.$color_blueG_100;
-    opacity: 0.6;
-    cursor: not-allowed;
-  }
-}
-
 // 제한 조건 제외 조건 수정 버튼이 사용
 .btn-type2 {
   padding: 0;
@@ -1270,7 +1198,7 @@ input::-webkit-inner-spin-button {
   //padding: 20px;
   overflow: auto;
   //max-height: 20vw;
-  max-height:calc(100% - 227px);
+  max-height:calc(100% - 224px);
   position:relative;
   .table {
     width: 100%;
@@ -1347,22 +1275,21 @@ input::-webkit-inner-spin-button {
   }
 
   button {
-    //padding: 7px 8px;
-    background-color: #fff;
-    color: #3B4044;
-    border: 1px solid #A8B3BD;
-    cursor: pointer;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 58px;
+    height: 20px;
+    background-color: modules.$color_white;
+    color: modules.$color_blueG_800;
+    border: 1px solid modules.$color_blueG_400;
     border-radius: 4px;
-    font-size: 12px;
-    font-weight: 600;
-    width: 58px !important;
-    height: 18px;
-  }
+    @include modules.font-style(text_smb13);
 
-  button:hover {
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #000;
+    &:hover {
+      color: modules.$color_secondary;
+      border-color: modules.$color_secondary;
+    }
   }
 
   a {
@@ -1430,3 +1357,70 @@ input::-webkit-inner-spin-button {
   flex: 1;
 }
 
+// 버튼 정리
+//----------------------
+.target-wrap .footer-button-box button,
+.btn-crud {
+    display: inline-flex;
+    height: 37px;
+    box-sizing: border-box;
+    border: 1px solid modules.$color_blueG_600;
+    background-color: modules.$color_white;
+    @include modules.font-style(text_smb14);
+    color: modules.$color_secondary;
+    justify-content: center;
+    align-items: center;
+    padding: 0 16px;
+    min-width: 81px;
+    border-radius: 4px;
+
+    &:hover {
+      color: modules.$color_primary;
+      border-color: modules.$color_primary;
+    }
+}
+
+// 조건없을경우 일반 적인 공통 버튼 css, table 상단 우측 버튼
+.btn-common {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  padding: 0 16px;
+  height: 28px;
+  border-radius: 4px;
+  border: 1px solid modules.$color_blueG_600;
+  @include modules.font-style(text_smb13);
+  color: modules.$color_secondary;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    border-color: modules.$color_primary;
+    color: modules.$color_primary;
+  }
+  &:disabled {
+    border-color: modules.$color_blueG_100;
+    color: modules.$color_blueG_100;
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
+  &.add {
+    padding: 0 12px;
+    i {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      background-color: modules.$color_primary;
+      mask: url(../images/icon_plus.svg) no-repeat 50%;
+    }
+  }
+  &.del {
+    padding: 0 12px;
+    i {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      background-color: modules.$color_primary;
+      mask: url(../images/icon_minus.svg) no-repeat 50%;
+    }
+  }
+}
