--- a/src/assets/sass/_data.scss
+++ b/src/assets/sass/_data.scss
@@ -47,6 +47,7 @@ $font-styles: (
   text_smb14: (size: 14px, weight: 600),
   text_smb18: (size: 18px, weight: 600),
   text_smb20: (size: 20px, weight: 600),
+  text_m12: (size: 12px, weight: 500),
   text_m13: (size: 13px, weight: 500),
   text_R12: (size: 12px, weight: 400),
   text_R24: (size: 24px, weight: 400),
