--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -3,8 +3,8 @@
 .nav-wrap {
     height: modules.$top-h;
     box-sizing: border-box;
-    background: #fff;
-    border-bottom: 1px solid #A8B3BD;
+    background: modules.$color_white;
+    border-bottom: 1px solid modules.$color_blueG_400;
     position: relative;
     display: flex;
     justify-content: center;
@@ -32,7 +32,7 @@
         padding-left: 36px;
         box-sizing: border-box;
         cursor: pointer;
-        color: #000;
+        color: modules.$color_secondary;
     }
 
     nav {
@@ -46,7 +46,7 @@
             &:hover {
                 .btn-route::after {
                     bottom: 0;
-                    background: #fff;
+                    background: modules.$color_white;
                 }
 
                 .depth2 {
@@ -69,7 +69,7 @@
                 position: relative;
                 overflow: hidden;
                 z-index: 4;
-                color: #525960;
+                color: modules.$color_blueG_700;
                 font-weight: 500;
 
                 .navi-text {
@@ -81,14 +81,14 @@
                 }
 
                 &:hover {
-                    color: modules.$focus-color;
+                    color: modules.$color_primary;
                 }
 
                 &.router-link-active {
-                    color: #fff !important;
+                    color: modules.$color_white !important;
 
                     .navi-text {
-                        background-color: modules.$focus-color;
+                        background-color: modules.$color_primary;
                     }
                 }
             }
@@ -167,5 +167,4 @@
             }
         }
     }
-    opacity: 0;
 }
