--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -9,7 +9,7 @@ html {
 body {  
   overflow-x: auto;
   overflow-y: hidden;
-  background-color: #757575;
+  background-color: modules.$color_white;
 
 }
 
@@ -110,8 +110,116 @@ body {
 .content-header{
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   height: 74px;
   box-sizing: border-box;
   border-bottom: 1px solid modules.$color_blueG_400;
+  padding-bottom: 20px;
+}
+
+.page-title{
+  font-size: 18px;
+  font-weight: 600;
+  color: modules.$color_secondary;
+}
+
+.contents-layout{
+    display: flex;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    @include modules.custom-scrollbar();
+    &.side-active{
+        padding-left: 240px;
+    }    
+}
+.contents-section{
+    flex: 1;
+}
+.side-navi{
+    width: 240px;
+    height: calc(100% - 60px);
+    border-right: 1px solid modules.$color_blueG_400;
+    box-sizing: border-box;
+    position: absolute;
+    left: -224px;
+    top: 60px;
+    &.side-active{
+      left: 0;
+      .btn-show{
+        transform: translateY(-50%) rotate(0deg);
+      }
+    }
+}
+.side-navi-title{
+    height: 74px;        
+    background-color: modules.$color_blueG_500;
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    position: relative;
+    .title{
+        font-size: 22px;
+        font-weight: 600;
+        color: modules.$color_white;
+        transform: translateY(5px);
+    }
+    .btn-show{
+      display: inline-flex;
+      width: 16px;
+      height: 32px;
+      box-sizing: border-box;
+      border: 1px solid modules.$color_white;
+      background: modules.$color_blueG_500 url(../images/icon_side_navi_arrow.svg) no-repeat 50%;
+      border-radius: 16px;
+      position: absolute;
+      right: -8px;
+      top: 50%;
+      transform: translateY(-50%) rotate(180deg);
+      cursor: pointer;
+    }
+}
+.side-navi-list{
+    li{
+        height: 53px;
+        display: flex;
+        align-items: center;        
+        font-size: 14px;   
+        font-weight: 600;
+        color: modules.$color_blueG_800;
+        cursor: pointer;        
+    }
+    .nav-link {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+        padding-left: 30px;     
+        padding-right: 20px; 
+
+        &:hover{
+            color: modules.$color_secondary;
+            background-color: modules.$color_blueG_100;
+            .icon-arrow-right{
+                display: block;
+                background-color: modules.$color_secondary;
+            }
+        }
+    }
+    .router-link-active{
+        color: modules.$color_primary !important;
+        background-color: modules.$color_white !important;
+        .icon-arrow-right{
+            display: block;
+            background-color: modules.$color_primary !important;
+        }
+    }
+    .icon-arrow-right{
+        display: none;
+        width: 7px;
+        height: 12px;
+        background-color: modules.$color_primary;
+        mask: url(../images/icon_navi_arrow.svg) no-repeat 50%;
+    }
 }
