--- a/src/assets/sass/_style.scss
+++ b/src/assets/sass/_style.scss
@@ -189,15 +189,16 @@
             &.icon{
                 display: inline-block;
                 margin-left: auto;
-                width: 40px;
                 height: 18px;
                 border-radius: 4px;
                 border: 1px solid;
                 &.up_arrow {
                     background: url(../images/icon_up_arrow.svg) no-repeat center;
+                    width: 40px;
                 }
                 &.down_arrow {
                     background: url(../images/icon_down_arrow.svg) no-repeat center;
+                    width: 40px;
                 }
                 &.circle_info {
                     background: url(../images/icon_info.svg) no-repeat center;
@@ -331,7 +332,7 @@
                     .btn-remove {
                         right: 5px;
                     }
-                }
+                }                
             }
         }
     }
@@ -348,21 +349,6 @@
             gap: 8px;
             justify-content: end;
         }
-        button {
-            font-size: 14px;
-            font-weight: 500;
-            color: modules.$color_secondary;
-            border-radius: 4px;
-            width: 81px;
-            height: 37px;
-            border: 1px solid modules.$color_blueG_600;
-            //padding: 8px 16px;
-            transition: 0.2s;
-            &:hover {
-                color: modules.$color_primary;
-                border-color: modules.$color_primary;
-            }
-        }
     }
 
     // 필터 css
@@ -375,7 +361,7 @@
             gap: 8px;
         }
         .btn-filter {
-            font-size: 13px;
+            @include modules.font-style(text_smb13);
             height: 28px;
             padding: 0 8px;
             border-radius: 4px;
@@ -415,7 +401,7 @@
                 display: inline-block;
                 width: 100%;
                 height: 100%;
-                background-color: modules.$color_blueG_600;
+                background-color: modules.$color_secondary;
                 mask: url(../images/icon_filter.svg) no-repeat 50%;
             }
             &:hover {
@@ -523,6 +509,7 @@
         flex: 1;
         flex-direction: column;
         position: relative;
+        padding: 16px;
         .info-box {
             display: flex;
             justify-content: space-between;
@@ -532,16 +519,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                gap: 8px;
-            }
-            button {
-                width: 61px;
-                height: 28px;
-                border-radius: 4px;
-                border: 1px solid;
-                span {
-                    color: modules.$color-primary;
-                }
+                gap: 4px;
             }
         }
         .table-row {
@@ -559,13 +537,103 @@
     .dialog-box .dialog-body {
         max-height: 100% !important;
     }
+
+    //공유 대상 선택 모달
+    .share-target-choice-wrap {
+        height: calc(100% - 100px);
+        display: flex;
+        padding: 0 20px;
+        gap: 20px;
+        .all-user-wrap {
+            .title-row {
+                color: #000000;
+                font-size: 18px;
+                font-weight: 600;
+                padding-bottom: 10px;
+                text-align: left;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            .table-row {
+                padding: 0 !important;
+                height: calc(100% - 32px) !important;
+            }
+        }
+        .choice-user-wrap {
+            flex: 0 0 320px;
+            .title-row {
+                color: #000000;
+                font-size: 18px;
+                font-weight: 600;
+                padding-bottom: 10px;
+                text-align: left;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            .table-row {
+                padding: 0 !important;
+                height: calc(100% - 32px) !important;
+            }
+        }
+        .table-scroll .table-body {
+            overflow-x: hidden;
+            overflow-y: auto;
+            height: 360px;
+            position: relative;
+            background-color: #F9FAFB;
+        }
+        .btn-search{
+            .icon {
+                width: inherit !important;
+            }
+        }
+    }
+    input{
+        border-radius: 4px;
+        border: 1px solid modules.$color_blueG_600;
+        background-color: modules.$color_white;
+        height: 36px;
+        box-sizing: border-box;
+        width: 100%;
+        &::placeholder{
+            color: modules.$color_blueG_500;
+            text-align:left;
+        }
+    }
+
+}
+
+// 엑스 버튼 공통
+.btn-common-del {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    position: relative;
+    .icon{
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        cursor: pointer;
+        z-index: 2;
+        background-color: modules.$color_secondary;
+        @include modules.textIndent();
+        mask: url(../images/icon_code_remove.svg) no-repeat 50%;
+        mask-size: 28px 28px;
+    }
+    &:hover {
+        background-color: modules.$color_blueG_400;
+    }
 }
 
 //타겟관리 - 타겟그룹지정
 .scroll-box {
     overflow-x: hidden;
     overflow-y: auto;
-
     &.tg-name {
         height: 225px;
     }
@@ -1193,80 +1261,3 @@
     }
 }
 
-.contents-layout{
-    display: flex;
-    height: 100%;
-    &.side-active{
-        padding-left: 240px;
-    }    
-}
-.contents-section{
-    flex: 1;
-}
-.side-navi{
-    // flex: 0 0 240px;
-    width: 240px;
-    height: calc(100% - 60px);
-    border-right: 1px solid modules.$color_blueG_400;
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    top: 60px;
-}
-.side-navi-title{
-    height: 74px;        
-    background-color: modules.$color_blueG_500;
-    display: flex;
-    align-items: center;
-    padding-left: 30px;
-    span{
-        font-size: 22px;
-        font-weight: 600;
-        color: modules.$color_white;
-        transform: translateY(5px);
-    }
-}
-.side-navi-list{
-    li{
-        height: 53px;
-        display: flex;
-        align-items: center;        
-        font-size: 14px;   
-        font-weight: 600;
-        color: modules.$color_blueG_800;
-        cursor: pointer;        
-    }
-    .nav-link {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        height: 100%;
-        padding-left: 30px;     
-        padding-right: 20px; 
-
-        &:hover{
-            color: modules.$color_secondary;
-            background-color: modules.$color_blueG_100;
-            .icon-arrow-right{
-                display: block;
-                background-color: modules.$color_secondary;
-            }
-        }
-    }
-    .router-link-active{
-        color: modules.$color_primary !important;
-        background-color: modules.$color_white !important;
-        .icon-arrow-right{
-            display: block;
-            background-color: modules.$color_primary !important;
-        }
-    }
-    .icon-arrow-right{
-        display: none;
-        width: 7px;
-        height: 12px;
-        background-color: modules.$color_primary;
-        mask: url(../images/icon_navi_arrow.svg) no-repeat 50%;
-    }
-}
