--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -1424,3 +1424,80 @@ input::-webkit-inner-spin-button {
     }
   }
 }
+
+//파일 첨부
+.filebox {
+  display: flex;
+  input[type="file"] {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+  }
+  label {
+    display: inline-block;
+    width: auto;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 2px;    
+    padding: 0 18px;
+    color: #fff !important;
+    font-size: 13px;
+    font-weight: 400 !important;
+    // border: 1px solid #565C67;
+    // background: #2E343E;
+    border: 1px solid #535b69;
+    background: #4c525e;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+    font-weight: 700;
+    border-radius: 4px;
+    cursor: pointer;
+    box-sizing: border-box;
+    transition: all ease 0.4s;
+    &:hover{
+      border: 1px solid #656c79;
+      background: #383f4b;
+      color: #fff !important;
+    }
+  }
+  .upload-name {
+    display: inline-block;
+    font-size: inherit;
+    font-family: inherit;
+    line-height: normal;
+    vertical-align: middle;
+    height: 32px;
+    line-height: 32px;
+    appearance: none;
+    box-sizing: border-box;
+    padding-left: 10px;
+    font-size: 13px;
+    border-radius: 2px;
+    margin-right: 5px;
+    // border: 1px solid #3C414B;
+    // background: #21252C;
+    // color: #e0e0e0;
+    border: 1px solid #c7c7c7;
+    background: #fff;
+    color: #444;
+    border-radius: 4px;
+  }
+  &.filebox-disabled{
+    position: relative;
+    &::after{
+      content:'';
+      display: block;
+      background-color: rgba(255, 255, 255, 0.5);
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+    }
+  }
+}
