--- a/src/assets/sass/_style.scss
+++ b/src/assets/sass/_style.scss
@@ -1095,11 +1095,17 @@
 }
 
 .custom-checkbox {
-    width: 20px;
+    // width: 20px;
+    width: auto;
     height: 20px;
     position: relative;
     font-size: 14px;
     user-select: none;
+    > label{
+        display: inline-flex;
+        align-items: center;
+        gap: 5px;
+    }
     input[type="checkbox"]{
         display: none;
         &:checked + .icon {
@@ -1126,11 +1132,12 @@
         border-radius: 4px;
         background-color: modules.$color_white;
         border: 1px solid modules.$color_blueG_400;
-        box-sizing: border-box;
-        position: absolute;
+        box-sizing: border-box;        
         cursor: pointer;
-        left: 0;
-        top: 0;
+        position: relative;
+        // position: absolute;
+        // left: 0;
+        // top: 0;
     }
 }
 
